--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
-      --primary: #0077ff;
-      --secondary: #00cc99;
-      --bg: #fdfdfd;
-      --text: #222;
-      --card: #ffffff;
+      --primary: #00e6e6;   /* Teal/Cyan accent */
+      --secondary: #00b3b3;
+      --bg: #0a0f1a;        /* Dark background */
+      --text: #f0f0f0;      /* Light text */
+      --card: #141c2c;      /* Card background */
     }
     body {
       margin: 0;
@@ -31,7 +31,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 8%;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
       z-index: 100;
     }
     nav .logo {
@@ -56,13 +56,13 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      background: linear-gradient(135deg, #0a0f1a, #0f1f33);
       padding: 20px;
     }
     .hero h1 {
       font-size: 3em;
       margin: 0;
+      color: var(--primary);
     }
     .hero p {
       font-size: 1.2em;
@@ -74,12 +74,12 @@
     .socials a {
       margin: 0 10px;
       text-decoration: none;
-      color: white;
+      color: var(--primary);
       font-weight: bold;
       transition: 0.3s;
     }
     .socials a:hover {
-      color: #ffe066;
+      color: #ffffff;
     }
 
     /* Section */
@@ -93,7 +93,7 @@
       color: var(--primary);
     }
 
-    /* Education & Experience */
+    /* Education */
     .timeline {
       border-left: 3px solid var(--primary);
       padding-left: 20px;
@@ -117,7 +117,7 @@
       padding: 15px;
       border-radius: 12px;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
     }
 
     /* Projects */
@@ -130,7 +130,7 @@
       background: var(--card);
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
       transition: transform 0.3s;
     }
     .project:hover {
@@ -153,6 +153,7 @@
       padding: 20px;
       border-top: 2px solid var(--primary);
       margin-top: 40px;
+      color: #aaa;
     }
 
     /* Responsive */
@@ -182,7 +183,7 @@
     <div>
       <h1>Hi, I'm Abdulla 👋</h1>
       <p>Engineering Student | Developer | Tech Enthusiast</p>
-      <p>📞 +91 7795588802 | <a href="mailto:abdulla.1si22et001@gmail.com" style="color:white;">Email Me</a></p>
+      <p>📞 +91 7795588802 | <a href="mailto:abdulla.1si22et001@gmail.com" style="color:var(--primary);">Email Me</a></p>
       <div class="socials">
         <a href="http://www.linkedin.com/in/abdullasyed08" target="_blank">LinkedIn</a>
         <a href="https://github.com/abdullasyed08" target="_blank">GitHub</a>
